Fixes output content not scrollable on mobile devices

--- a/src/components/Files.css
+++ b/src/components/Files.css
@@ -71,9 +71,9 @@
 }
 
 .file-content {
-    height: 2.5rem;
+    height: 2.125rem;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-size: 0.75rem;
